// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddIps renders correctly when user reaches max ip limit 1`] = `
<form
  noValidate={true}
>
  <Panel
    actions={
      Array [
        Object {
          "Component": [Function],
          "content": "Manage Your IPs",
          "to": "/account/ip-pools",
        },
      ]
    }
    title="Add Dedicated IPs"
  >
    <Panel.Section>
      <p>
        Dedicated IPs give you better control over your sending reputation.  You can add up to 
        0
         dedicated IPs to your plan for 
        <DedicatedIpCost
          isAWSAccount={false}
          plan={Object {}}
          quantity="1"
        />
         each.
      </p>
      <Field
        component={[Function]}
        disabled={true}
        label="Quantity"
        max={0}
        min="1"
        name="quantity"
        required={true}
        type="number"
        validate={
          Array [
            [Function],
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Connect(IpPoolSelect)
        disabled={true}
        formName="add-sending-ips"
      />
      <Note>
        New dedicated IP addresses will need to be warmed up, so we suggest adding them to an isolated pool.  Read the 
        <WarmUpArticleLink />
         for more information.
      </Note>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={true}
        primary={true}
        size="default"
        type="submit"
      >
        Add Dedicated IPs
      </Button>
      <Button
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </Panel>
</form>
`;

exports[`AddIps renders correctly with default props 1`] = `
<form
  noValidate={true}
>
  <Panel
    actions={
      Array [
        Object {
          "Component": [Function],
          "content": "Manage Your IPs",
          "to": "/account/ip-pools",
        },
      ]
    }
    title="Add Dedicated IPs"
  >
    <Panel.Section>
      <p>
        Dedicated IPs give you better control over your sending reputation.  You can add up to 
        NaN
         dedicated IPs to your plan for 
        <DedicatedIpCost
          isAWSAccount={false}
          plan={Object {}}
          quantity="1"
        />
         each.
      </p>
      <Field
        component={[Function]}
        disabled={false}
        label="Quantity"
        max={NaN}
        min="1"
        name="quantity"
        required={true}
        type="number"
        validate={
          Array [
            [Function],
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Connect(IpPoolSelect)
        disabled={false}
        formName="add-sending-ips"
      />
      <Note>
        New dedicated IP addresses will need to be warmed up, so we suggest adding them to an isolated pool.  Read the 
        <WarmUpArticleLink />
         for more information.
      </Note>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={false}
        primary={true}
        size="default"
        type="submit"
      >
        Add Dedicated IPs
      </Button>
      <Button
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </Panel>
</form>
`;

exports[`AddIps renders free ip elements when included in plan 1`] = `
<form
  noValidate={true}
>
  <Panel
    actions={
      Array [
        Object {
          "Component": [Function],
          "content": "Manage Your IPs",
          "to": "/account/ip-pools",
        },
      ]
    }
    title="Add Dedicated IPs"
  >
    <Panel.Section>
      <p>
        Dedicated IPs give you better control over your sending reputation.  You can add up to 
        NaN
         dedicated IPs to your plan for 
        <DedicatedIpCost
          isAWSAccount={false}
          plan={
            Object {
              "includesIp": true,
            }
          }
          quantity="1"
        />
         each.
      </p>
      <p>
        Your plan includes one free IP.  If used, your account statement will show a charge with a matching refund.
      </p>
      <Field
        component={[Function]}
        disabled={false}
        label="Quantity"
        max={NaN}
        min="1"
        name="quantity"
        required={true}
        type="number"
        validate={
          Array [
            [Function],
            [Function],
            [Function],
            [Function],
          ]
        }
      />
      <Connect(IpPoolSelect)
        disabled={false}
        formName="add-sending-ips"
      />
      <Note>
        New dedicated IP addresses will need to be warmed up, so we suggest adding them to an isolated pool.  Read the 
        <WarmUpArticleLink />
         for more information.
      </Note>
    </Panel.Section>
    <Panel.Section>
      <Button
        disabled={false}
        primary={true}
        size="default"
        type="submit"
      >
        Add Dedicated IPs
      </Button>
      <Button
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </Panel>
</form>
`;
